--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ h3 {
 
 footer {
   background-color: #e06d7b;
-  margin: 42px auto 0px auto;
+  margin: 25% auto 0px auto;
   padding: auto;
   height: 42px;
   padding-top: 12px;
